Close `)` when using `calc()` in `_alignment.scss`.  Fixes: https://github.com/justintadlock/mythic/issues/53
Props @m-e-h

--- a/resources/scss/utilities/_alignment.scss
+++ b/resources/scss/utilities/_alignment.scss
@@ -49,6 +49,6 @@
 	.alignwide {
 		margin-left  : -25%;
 		margin-right : -25%;
-		max-width    : calc( #{ content-width() } + 50%;
+		max-width    : calc( #{ content-width() } + 50% );
         }
 }
